fixed animation hitch when switching back from tab; added temp solution for notes entries on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -111,11 +111,8 @@ h4 {
     width: 100%;
     top: 300px;
     overflow: hidden;
-
-     /* For some unknown reason, making base opacity
-        0 causes lag when triggering opacity
-        transition animation */
-    opacity: 0.001;
+    display: none;
+    opacity: 0;
     animation-fill-mode: forwards;
 }
 
@@ -189,7 +186,7 @@ h4 {
 #chillAnimation {
     /* border: 7px solid black; */
     position: absolute;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     position: absolute;
@@ -197,11 +194,7 @@ h4 {
     width: 100%;
     /* top: 300px; */
     overflow: hidden;
-
-    /* For some unknown reason, making base opacity
-        0 causes lag when triggering opacity
-        transition animation */
-    opacity: 0.001;
+    opacity: 0;
     animation-fill-mode: forwards;
 }
 
